[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/sprite_frames/mecha_green.tres" type="SpriteFrames" id=1]
[ext_resource path="res://scripts/entities/Entity.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[node name="Entity" type="KinematicBody2D" groups=["entity", "player"]]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "idle"
offset = Vector2( 0, -2.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Feet" type="Node2D" parent="."]
position = Vector2( 0, 9 )

[node name="ItemVacuum" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemVacuum"]
shape = SubResource( 2 )

[connection signal="body_entered" from="ItemVacuum" to="." method="_on_ItemVacuum_body_entered"]
[connection signal="body_exited" from="ItemVacuum" to="." method="_on_ItemVacuum_body_exited"]
